card button align fixed

--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,15 @@ body {
   color: white;
 }
 
+.card .card-body h5{
+  font-weight: bold;
+}
+
+.card .card-body a{
+  font-weight: bold;
+}
+
 .card img {
-  /* change the height to whatever you want */
   height: 300px;
   object-fit: cover;
   display: block;
@@ -102,14 +109,13 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #f2f2f2;
+  background-color: #f7f3f0;
 }
 
 .topnav a {
-  background-color: "#45485b";
+  background-color: #f7f3f0;
   float: center;
   display: block;
-  color: ;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
